postflop_solver: update

--- a/postflop_solver/src/postflop_solver/lib.rs.html
+++ b/postflop_solver/src/postflop_solver/lib.rs.html
@@ -156,6 +156,20 @@
 <span id="150">150</span>
 <span id="151">151</span>
 <span id="152">152</span>
+<span id="153">153</span>
+<span id="154">154</span>
+<span id="155">155</span>
+<span id="156">156</span>
+<span id="157">157</span>
+<span id="158">158</span>
+<span id="159">159</span>
+<span id="160">160</span>
+<span id="161">161</span>
+<span id="162">162</span>
+<span id="163">163</span>
+<span id="164">164</span>
+<span id="165">165</span>
+<span id="166">166</span>
 </pre><pre class="rust"><code><span class="doccomment">//! An open-source postflop solver library.</span>
 <span class="doccomment">//!</span>
 <span class="doccomment">//! # Examples</span>
@@ -270,7 +284,21 @@
 <span class="doccomment">//! game.back_to_root();</span>
 <span class="doccomment">//! ```</span>
 <span class="doccomment">//!</span>
-<span class="doccomment">//! # Features</span>
+<span class="doccomment">//! # Implementation details</span>
+<span class="doccomment">//! - **Algorithm**: The solver uses [Discounted CFR] algorithm.</span>
+<span class="doccomment">//!   Currently, the value of γ is set to 5.0, rather than the 2.0 recommended by the original paper.</span>
+<span class="doccomment">//! - **Precision**: 32-bit floating-point numbers are used in most places.</span>
+<span class="doccomment">//!   When calculating summations, temporal values use 64-bit floating-point numbers.</span>
+<span class="doccomment">//!   If the compression feature is enabled, each game node stores the values by 16-bit integers</span>
+<span class="doccomment">//!   with a single 32-bit floating-point scaling factor.</span>
+<span class="doccomment">//! - **Handling isomorphism**: The solver does not perform any abstraction.</span>
+<span class="doccomment">//!   However, isomorphic chances (turn and river deals) are combined into one.</span>
+<span class="doccomment">//!   For example, if the flop is monotone, the three non-dealt suits are isomorphic,</span>
+<span class="doccomment">//!   allowing us to skip the calculation for two of the three suits.</span>
+<span class="doccomment">//!</span>
+<span class="doccomment">//! [Discounted CFR]: https://arxiv.org/abs/1809.04040</span>
+<span class="doccomment">//!</span>
+<span class="doccomment">//! # Crate features</span>
 <span class="doccomment">//! - `custom-alloc`: Uses custom memory allocator in solving process.</span>
 <span class="doccomment">//!   It significantly reduces the number of calls of the default allocator,</span>
 <span class="doccomment">//!   so it is recommended to use this feature when the default allocator is not so efficient.</span>
