postflop_solver: update

--- a/postflop_solver/postflop_solver/index.html
+++ b/postflop_solver/postflop_solver/index.html
@@ -130,7 +130,7 @@ allowing us to skip the calculation for two of the three suits.</li>
 </ul>
 <h2 id="crate-features"><a href="#crate-features">Crate features</a></h2>
 <ul>
-<li><code>custom-alloc</code>: Uses custom memory allocator in solving process.
+<li><code>custom-alloc</code>: Uses custom memory allocator in solving process (only available in nightly Rust).
 It significantly reduces the number of calls of the default allocator,
 so it is recommended to use this feature when the default allocator is not so efficient.
 Disabled by default.</li>
@@ -166,5 +166,5 @@ Enabled by default.</li>
 </div></div><div class="item-row"><div class="item-left module-item"><a class="fn" href="fn.solve.html" title="postflop_solver::solve fn">solve</a></div><div class="item-right docblock-short"><p>Performs Discounted CFR algorithm until the given number of iterations or exploitability is
 satisfied.</p>
 </div></div><div class="item-row"><div class="item-left module-item"><a class="fn" href="fn.solve_step.html" title="postflop_solver::solve_step fn">solve_step</a></div><div class="item-right docblock-short"><p>Proceeds Discounted CFR algorithm for one iteration.</p>
-</div></div></div></section></div></main><div id="rustdoc-vars" data-root-path="../" data-current-crate="postflop_solver" data-themes="ayu,dark,light" data-resource-suffix="" data-rustdoc-version="1.64.0-nightly (c80c4b8fd 2022-06-26)" ></div>
+</div></div></div></section></div></main><div id="rustdoc-vars" data-root-path="../" data-current-crate="postflop_solver" data-themes="ayu,dark,light" data-resource-suffix="" data-rustdoc-version="1.64.0-nightly (2f3ddd9f5 2022-06-27)" ></div>
 </body></html>
