postflop_solver: update

--- a/postflop_solver/postflop_solver/index.html
+++ b/postflop_solver/postflop_solver/index.html
@@ -22,8 +22,8 @@
     initial_state: BoardState::Turn,
     starting_pot: <span class="number">200</span>,
     effective_stack: <span class="number">900</span>,
-    rake_basis_points: <span class="number">0</span>,
-    rake_cap: <span class="number">0</span>,
+    rake_rate: <span class="number">0.0</span>,
+    rake_cap: <span class="number">0.0</span>,
     flop_bet_sizes: [bet_sizes.clone(), bet_sizes.clone()], <span class="comment">// [OOP, IP]
     </span>turn_bet_sizes: [bet_sizes.clone(), bet_sizes.clone()],
     river_bet_sizes: [bet_sizes.clone(), bet_sizes.clone()],
