postflop_solver: update

--- a/postflop_solver/src/postflop_solver/lib.rs.html
+++ b/postflop_solver/src/postflop_solver/lib.rs.html
@@ -256,7 +256,7 @@
 //! // for i in 0..max_num_iterations {
 //! //     solve_step(&amp;game, i);
 //! //     if (i + 1) % 10 == 0 {
-//! //         let exploitability = compute_mes_ev_average(&amp;game);
+//! //         let exploitability = compute_exploitability(&amp;game);
 //! //         if exploitability &lt;= target_exploitability {
 //! //             println!(&quot;Exploitability: {:.2}&quot;, exploitability);
 //! //             break;
